--- a/js_alarm.html
+++ b/js_alarm.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>Alarm Clock</title>
@@ -12,7 +9,7 @@
   <meta name="author" content="Will Rhodes">
 
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
-
+  <link rel="stylesheet" href="./styles.css">
   <script src="js_alarm.js">
   </script>
 </head>
@@ -20,16 +17,16 @@
 <body>
   <div>
     <header>
-      <h1>Alarm Clock</h1>
+      <h1 class="title">Alarm Clock</h1>
     </header>
-    <div>
-      <div id="clock"></div>
-      <div id="alarmsList"></div>
+    <div class="container">
+      <div id="clock" class="clock"></div>
+      <div id="alarmsList" class="alarms_list"></div>
       <div id="addAlarm">
         <div id="form">
           <form id="alarmForm">
-            <input type="number" min="0" max="23" value="0" required name="hour" form="alarmForm" class="alarm-input"/>:
-            <input type="number" min="0" max="59" value="0" required name="minute" form="alarmForm" class="alarm-input"/>
+            <input type="number" min="0" max="23" value="0" required name="hour" form="alarmForm" class="alarm-form"/>:
+            <input type="number" min="0" max="59" value="0" required name="minute" form="alarmForm" class="alarm-form"/>
             <button form="alarmForm" id="addAlarm" type="submit" class="alarm-btn set-btn">SET ALARM</button>
             </form>
         </div>
